tests/paczka1/small_fuzzy/91864187.err
Error in line 3: VbiwutN S534 72,0
Error in line 12: I1zD S396 60,9
